--- a/css/base-styles.css
+++ b/css/base-styles.css
@@ -38,7 +38,7 @@ a:hover {
 	color: #93C600;
 }
 
-h1,h2,h3,h4,h5,h6,strong {
+h1,h2,h3,h4,h5,h6,strong, #logo {
 	/*bringing boldness back to headers and the strong element*/
 	font-weight:bold;
 }
@@ -49,9 +49,9 @@ em {
 }
 
 /* headers */
-h1, h2, h3 { font-family: 'Trebuchet MS', Tahoma, Sans-serif;  }
+h1, h2, h3, #logo { font-family: 'Trebuchet MS', Tahoma, Sans-serif;  }
 
-h1 {
+h1, #logo {
 	font-size: 180%;	
 	font-weight: normal;	
 	color: #555;
@@ -68,7 +68,7 @@ h3 {
 	color: #666666;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, #logo {
 	margin:15px 0 10px 0;
 }
 
@@ -148,10 +148,10 @@ div.bodycopy ul, ol {
 	color: #fff;
 	z-index:3;	
 }
-#header h1#logo-text {
+#logo-text {
     margin:0;
 }
-#header h1#logo-text a {
+#logo-text a {
 	position: absolute;
 	margin: 0; padding: 0;
 	font: normal 45px 'Trebuchet MS', Arial, Sans-serif;
@@ -168,7 +168,7 @@ div.bodycopy ul, ol {
 	top: 25px; left: 35px;	
 }
 
-#header h1#logo-text a sup {
+#logo-text a sup {
 	font-family:verdana;
 	font-size:18px;
     vertical-align: top;
